# JunkLoad

./: CMakeLists.txt  Doxyfile  main.cpp
CMake/: StringifyShaders.cmake
data/: CMakeLists.txt  blinn_phong.shader  color.shader
doc/: slides.tex
equalizer/: CMakeLists.txt  channel.cpp  channel.h  config.cpp  config.h  eqPly.cpp  eqPly.h  error.h  frameData.cpp  frameData.h  initData.cpp  initData.h  localInitData.cpp  localInitData.h  pipe.cpp  vertexData.cpp  view.h  window.cpp  window.h
equalizer/mesh/: typedefs.h  vertexBufferBase.h  vertexBufferLeaf.cpp  vertexBufferLeaf.h  vertexBufferNode.h  vertexBufferRoot.cpp  vertexBufferRoot.h  vertexBufferState.h
include/boost/qvm/: all.hpp  assert.hpp  deduce_m.hpp  deduce_q.hpp  deduce_s.hpp  deduce_v.hpp  enable_if.hpp  error.hpp  inline.hpp  m.hpp  m2.hpp  m3.hpp  m4.hpp  m_access.hpp  m_traits.hpp  m_traits_array.hpp  map.hpp  map_mm.hpp  map_mv.hpp  map_vm.hpp  mat.hpp  math.hpp  q.hpp  q_access.hpp  q_traits.hpp  quat.hpp  qv.hpp  qvm.hpp  s_traits.hpp  static_assert.hpp  sw.hpp  sw2.hpp  sw3.hpp  sw4.hpp  v.hpp  v2.hpp  v3.hpp  v4.hpp  v_access.hpp  v_traits.hpp  (+6 more)
include/frustum/: aligned_box.hpp  frustum.hpp  matrix.hpp  plane.hpp  vertex.hpp
include/jnk/: data_set.hpp  stream_iterator.hpp
include/junk/: VMMLibIncludes.h  attribute_accessor.hpp  data_set.hpp  mapped_data_element.hpp  mapped_data_set.hpp  stream_data_iterators.hpp  stream_iterator.hpp  traits.hpp  types.hpp
include/stream_process/: CommonTypedefs.h  EigenvalueSolver.h  Priority2DTree.h  StreamProcessing.h  VMMLibIncludes.h  aabb.h  accurate_curvature_op.hpp  active_set.h  active_set_fifo.h  active_set_op.h  adaptive_neighbor_op.hpp  algebraic_sphere.hpp  andi_paraboloid_fit.hpp  apss_op.hpp  ascii_loader.hpp  ascii_to_elliptic_point.hpp  ascii_to_point.hpp  ascii_to_round_point.hpp  attribute.hpp  attribute_accessor.hpp  attribute_getter.hpp  attribute_helper.hpp  attribute_type.hpp  bagatelo_wu_curvature_op.hpp  batch_converter.hpp  binary_reader.hpp  bit.hpp  bit_array.hpp  bounding_volume.hpp  bounds.hpp  built_in_operators.hpp  calculate_miao_curvature.hpp  chain_config.h  chain_io_stream_op.hpp  chain_manager.hpp  chain_operator.hpp  chain_operators.hpp  compute_accurate_curvature.hpp  compute_centroid.hpp  compute_covariance.hpp  (+270 more)
include/stream_process/old/: kdtree_aabb.h  kdtree_common.h  kdtree_compare.h  kdtree_get.h  kdtree_node.h  kdtree_split.h
include/stream_process/reeb_sabat/: reeb_graph.cpp  reeb_graph.hpp  reeb_graph_op_algorithm.cpp  reeb_graph_op_algorithm.hpp  (+6 more)
include/vmmlib/: exception.hpp  jacobi_solver.hpp  lapack_includes.hpp  lapack_types.hpp  matrix.hpp  matrix_traits.hpp  vector.hpp  vector_traits.hpp  vmmlib.hpp
include/zix/: z_index.hpp  z_order.hpp
junkload/: CMakeLists.txt  VMMLibIncludes.h  adapted.hpp  attribute.cpp  attribute.hpp  attribute_accessor.hpp  attribute_type.hpp  bit_array.hpp  data_set.cpp  data_set_header.cpp  data_set_header.hpp  data_set_header_io.cpp  data_set_header_io.hpp  data_types.cpp  data_types.hpp  element.cpp  element.hpp  file_suffix_helper.hpp  generator.cpp  mapped_data_element.cpp  mapped_data_element.hpp  mapped_data_set.cpp  mapped_data_set.hpp  parser.cpp  stream_data_iterators.hpp  stream_structure.cpp  stream_structure.hpp  types.cpp  types.hpp
junkload/spirit/: adapded.hpp  adapted.hpp  dummy.cpp  generator.cpp  parser.cpp  qi.hpp  symbols.hpp
libs/jnk/: CMakeLists.txt  data_set.cpp
libs/zix/: CMakeLists.txt
maoni/: CMakeLists.txt  Model.cpp  Model.hpp  ModelPLY.cpp  Shader.cpp  Shader.hpp  main.cpp
preprocess/: CMakeLists.txt  attribute.cpp  attribute.hpp  attribute_accessor.hpp  attribute_type.hpp  bit_array.hpp  data_element.cpp  data_element.hpp  data_set_header.cpp  data_set_header.hpp  data_set_header_io.cpp  data_set_header_io.hpp  data_types.cpp  data_types.hpp  exception.cpp  file_suffix_helper.hpp  find_optimal_transform.hpp  main.cpp  mapped_data_element.cpp  mapped_data_element.hpp  mapped_data_set.cpp  mapped_data_set.hpp  ply_converter.cpp  ply_converter.hpp  point_set.hpp  preprocess_types.hpp  reindex_faces.cpp  reindex_faces.hpp  sort_data_set.cpp  sort_data_set.hpp  special_accessors.hpp  stream_data.hpp  stream_data_iterators.hpp  stream_structure.cpp  stream_structure.hpp
preprocess/optimize/: main.cpp
preprocess/ply/: convert.cpp  convert.hpp  main.cpp
src/: EigenvalueSolver.cpp  Priority2DTree.cpp  active_set.cpp  active_set_op.cpp  adaptive_neighbor_op.cpp  algebraic_sphere.cpp  apss_op.cpp  ascii_loader.cpp  ascii_to_elliptic_point.cpp  ascii_to_point.cpp  ascii_to_round_point.cpp  attribute.cpp  attribute_getter.cpp  attribute_helper.cpp  binary_reader.cpp  built_in_operators.cpp  chain_manager.cpp  chain_operators.cpp  converter.cpp  curvature_computation_algorithm.cpp  curvature_op.cpp  curve_debug_main.cpp  curve_debug_viewer.cpp  curves.py  data_element.cpp  data_set_header.cpp  data_set_header_io.cpp  data_types.cpp  default_normal_op_algorithm.cpp  diff_mode.cpp  eigen_sphere_fitter.cpp  ellipse_axis_fix_op.cpp  exception.cpp  fairing_op.cpp  file_loader.cpp  file_suffix_helper.cpp  find_mode.cpp  gen_mode.cpp  in_out_strategy.cpp  insertion_sort_worker.cpp  (+86 more)
tools/: CMakeLists.txt  calc_normals.cpp  convert.cpp  fix_scale.cpp  main.cpp  optimize.cpp
tools/box/: assign.cpp  assign.hpp  main.cpp  min_max.hpp
tools/convert/: calc_normals.cpp  convert.cpp  fix_scale.cpp  main.cpp
tools/equalizer/: CMakeLists.txt  channel.cpp  channel.h  config.cpp  config.h  eqPly.h  initData.cpp  localInitData.cpp  localInitData.h  node.cpp  node.h  pipe.h  window.cpp
tools/equalizer/mesh/: node.cpp  node.hpp  vertexBufferData.h  vertexBufferNode.cpp  vertexBufferNode.h  vertexBufferRoot.cpp  vertexBufferRoot.h  vertexBufferState.h  vertexData.cpp  vertexData.h
tools/maoni/: BoxModel.cpp  BoxModel.hpp  BoxNode.cpp  BoxNode.hpp  CMakeLists.txt  Model.cpp  Model.hpp  Shader.cpp  main.cpp
tools/ply/: main.cpp  ply.h  ply_parser.hpp
tools/sort/: intro_sort.hpp  main.cpp  reindex_faces.hpp  sort_data_set.hpp  z_order.hpp
z/: bit.cpp
(+18 files in other folders)
